# desperate_housewife

./: .gitignore  CMakeLists.txt  README.md  desperate_housewife_controllers.xml  frames.gv  package.xml  phobic_dynamic_plugins.xml  prova_readme.md  test.log.txt
config/: deseprate_mind_param.yaml  desperate_asus_head_vito_calib.yaml  desperate_demo_camera_params.yaml  desperate_demo_fitting_params.yaml  desperate_demo_hand_pose_params.yaml  desperate_home_position.yaml  desperate_home_trash_position.yaml  desperate_mind_param.yaml  desperate_robot_real_gains.yaml  desperate_robot_sim_gains.yaml  grid.yaml  hardware_interfaces.yaml  home_pose_right_arm.yaml  hw_interface.yaml  lwr_controllers.yaml  lwr_controllers_desp.yaml  test_list.yaml  topics.yaml  vito_controllers.yaml
doc/: manifest.yaml
doc/html/: Vito__home_8h.html  Vito__home_8h__incl.map  Vito__home_8h__incl.md5  Vito__home_8h_source.html  annotated.html  ball__main_8cpp.html  ball__main_8cpp__incl.map  ball__main_8cpp__incl.md5  ball__main_8cpp_source.html  ball__node_8cpp.html  ball__node_8cpp__incl.map  ball__node_8cpp__incl.md5  ball__node_8cpp_source.html  classBasicGeometriesNode-members.html  classBasicGeometriesNode.html  classBasicGeometries_1_1cylinder-members.html  classBasicGeometries_1_1cylinder.html  classBasicGeometries_1_1sphere-members.html  classBasicGeometries_1_1sphere.html  classDesperateDecisionMaker-members.html  classDesperateDecisionMaker.html  classHandPoseGenerator-members.html  classHandPoseGenerator.html  classHomeVitoPosition-members.html  classHomeVitoPosition.html  classball-members.html  classball.html  classdesperate__housewife_1_1PotentialFieldControl-members.html  classdesperate__housewife_1_1PotentialFieldControl.html  classdesperate__housewife_1_1PotentialFieldControl__inherit__graph.map  classdesperate__housewife_1_1PotentialFieldControl__inherit__graph.md5  classes.html  classgrid-members.html  classgrid.html  classsceneFilter-members.html  classsceneFilter.html  classsendObj-members.html  classsendObj.html  cylinder__fitting_8hpp.html  cylinder__fitting_8hpp__dep__incl.map  (+250 more)
doc/html/msg/: Error_msg.html  Start.html  fittedGeometriesArray.html  fittedGeometriesSingle.html  handPoseSingle.html  handPosesArray.html  home.html  obstacleArray.html  obstacleSingle.html
doc/html/srv/: ObstacleInfoArray.html
include/: Grasp_state.h  HandPoseGenerator_state.h  Home_state.h  Place_table_state.h  Removed_state.h  SoftHand_states_close.h  SoftHand_states_open.h  Steady_state.h  Trash_position.h  Vito_home.h  Wait_msgs_.h  cylinder_fitting.hpp  desperate_State_machine.h  desperate_mind.h  distance_between_lines.h  exit_state.h  fit_geometries.h  getClosestObject.hpp  grasp_state.h  grid.h  grid.hpp  hand_pose_filtered.h  hand_pose_generator.h  hand_pose_generator_old.h  home_state.h  interpolationmb.h  memory_.h  overtune_state.h  phobic_camera.h  phobic_hand_pose.h  phobic_motion_planning.h  place_hand_dany.hpp  potendial_field_control.h  potential_field_control.h  potential_field_control_kinematic.h  potential_field_control_kinematic_reverse.h  potential_field_control_kinematic_reverse_effort.h  potential_field_control_old.h  prova_mp.h  scene_filter_node.launch  (+11 more)
include/utils/: kuka_lwr_utilities.h  pseudo_inversion.h
launch/: Desperate_pose_filter.launch  ball.launch  ball_main.launch  desperate_Vito_home.launch  desperate_asus_head_vito_broadcaster.launch  desperate_cylinder_fitting.launch  desperate_demo_asus_head_vito_broadcaster.launch  desperate_demo_fit_geometries.launch  desperate_demo_hand_pose_generator.launch  desperate_demo_scene_filter.launch  desperate_hand_pose.launch  desperate_housewife_demo.launch  desperate_mind.launch  desperate_robot.launch  desperate_robot.launch.orig  desperate_robot_for_test.launch  fit_geometries_node.launch  grid.launch  grid_main.launch  hand_pose_generator_node.launch  interactive_markers.launch  load_controller.launch  load_home_pose.launch  load_robot.launch  main_grafo.launch  run_vito.launch  rviz_config.rviz  rviz_config_ball.rviz  rviz_config_grid.rviz  scene_filter_node.launch  simulated_positions.launch  test_send_obst.launch  test_simulated_references.launch
msg/: Error_msg.msg  ObstacleInfoArray.srv  Start.msg  cyl_info.msg  fittedGeometriesArray.msg  fittedGeometriesSingle.msg  hand.msg  handPoseSingle.msg  handPosesArray.msg  home.msg  obstacleArray.msg  obstacleSingle.msg
robot/: vito.urdf.xacro
src/: Control_pf.cpp  Exit_state.cpp  Grasp_obj_state.cpp  HandPoseGenerator_state.cpp  Home_State_grafo.cpp  Overtune_state.cpp  Pos_trash_state.cpp  Pose_filtered.cpp  Remove_obj_state.cpp  Robot_description.cpp  SoftHand_close_state.cpp  SoftHand_open_state.cpp  Steady_state.cpp  Vito_home_node.cpp  Vito_home_node_old.cpp  Wait_msg_state.cpp  ball_main.cpp  ball_node.cpp  cilinder_fitting.cpp  desperate_mind-old.cpp  desperate_mind.cpp  desperate_mind_state_machine.cpp  distance_between_lines.cpp  error.txt  error_log.txt  fit_geometries.cpp  fit_geometries_node.cpp  grid_main.cpp  grid_node.cpp  hand_pose_generator.cpp  hand_pose_generator_node.cpp  hand_pose_generator_old.cpp  home_robot.cpp  init_robots.cpp  interactive_marker.cpp  keycommands.cpp  main.cpp  main_grafo.cpp  overtune_state.cpp  perche_non_fungi.cpp  (+37 more)
srv/: ObstacleInfo.srv  goPose.srv
test/: ros_test.cpp  test.cpp
worlds/: simple_environment.world
